add_library (${LIBRARY_NAME} SHARED ${SOURCES})

set_target_properties (${LIBRARY_NAME} PROPERTIES 
	LIBRARY_OUTPUT_DIRECTORY ../lib
	LINK_FLAGS -lpthread
	)

install(TARGETS ${LIBRARY_NAME} 
	LIBRARY DESTINATION ../lib/${LIBRARY_NAME}
	ARCHIVE DESTINATION ../lib/${LIBRARY_NAME})

file(GLOB HEADERS ./*.h)
install(FILES ${HEADERS} DESTINATION ../include/${LIBRARY_NAME})
